--- a/package.json
+++ b/package.json
@@ -53,5 +53,9 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "9.2.0",
+    "npm": "6.1.0"
   }
 }
