--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
         "@angular/platform-browser": "~7.2.0",
         "@angular/platform-browser-dynamic": "~7.2.0",
         "@angular/router": "~7.2.0",
+        "@ngrx/effects": "^7.4.0",
+        "@ngrx/store": "^7.4.0",
+        "@ngrx/store-devtools": "^7.4.0",
         "core-js": "^2.5.4",
         "express": "^4.17.1",
         "hammerjs": "^2.0.8",
