--- a/package.json
+++ b/package.json
@@ -27,12 +27,16 @@
         "@ngrx/effects": "^7.4.0",
         "@ngrx/store": "^7.4.0",
         "@ngrx/store-devtools": "^7.4.0",
+        "angular-tslint-rules": "^1.18.0",
         "core-js": "^2.5.4",
         "express": "^4.17.1",
         "hammerjs": "^2.0.8",
         "prettier": "^1.18.2",
         "rxjs": "~6.3.3",
+        "rxjs-tslint-rules": "^4.24.3",
         "tslib": "^1.9.0",
+        "tslint-consistent-codestyle": "^1.15.1",
+        "tslint-etc": "^1.6.0",
         "typescript": "~3.2.2",
         "zone.js": "~0.8.26"
     },
