--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "execute:pre-commit": "shx chmod +x .githooks/pre-commit",
         "precommit": "./node_modules/.bin/lint-staged",
         "postcommit": "git update-index --again",
-        "prettier:app": "prettier --write src/**/*.ts && prettier --write src/**/*.js",
+        "prettier:app": "prettier --write src/**/**/*.ts && prettier --write src/**/**/*.js",
         "init-hooks": "npm run execute:pre-commit && npm run execute:prepare-commit-msg && npm run execute:hooks-folder"
     },
     "private": true,
@@ -52,9 +52,9 @@
         "@angular/cli": "~7.3.8",
         "@angular/compiler-cli": "~7.2.0",
         "@angular/language-service": "~7.2.0",
-        "@types/node": "~8.9.4",
         "@types/jasmine": "~2.8.8",
         "@types/jasminewd2": "~2.0.3",
+        "@types/node": "~8.9.4",
         "codelyzer": "~4.5.0",
         "jasmine-core": "~2.99.1",
         "jasmine-spec-reporter": "~4.2.1",
@@ -64,8 +64,10 @@
         "karma-jasmine": "~1.1.2",
         "karma-jasmine-html-reporter": "^0.2.2",
         "protractor": "~5.4.0",
+        "shx": "^0.3.2",
         "ts-node": "~7.0.0",
         "tslint": "~5.11.0",
+        "tslint-plugin-prettier": "^2.0.1",
         "typescript": "~3.2.2"
     },
     "engines": {
