--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "rxjs": "~6.3.3",
         "tslib": "^1.9.0",
         "typescript": "~3.2.2",
+        "uuid": "^3.3.2",
         "zone.js": "~0.8.26"
     },
     "devDependencies": {
