--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "core-js": "^2.5.4",
         "express": "^4.17.1",
         "hammerjs": "^2.0.8",
+        "ng-circle-progress": "^1.5.0",
         "prettier": "^1.18.2",
         "rxjs": "~6.3.3",
         "rxjs-tslint-rules": "^4.24.3",
