--- a/package.json
+++ b/package.json
@@ -7,7 +7,19 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "npm run init-hooks",
+    "execute:hooks-folder": "git config core.hooksPath .githooks",
+    "execute:prepare-commit-msg": "shx chmod +x .githooks/prepare-commit-msg",
+    "execute:pre-commit": "shx chmod +x .githooks/pre-commit",
+    "init-hooks": "npm run execute:pre-commit && npm run execute:prepare-commit-msg && npm run execute:hooks-folder",
+    "rimraf": "rimraf",
+    "precommit": "./node_modules/.bin/lint-staged",
+    "postcommit": "git update-index --again",
+    "prettier:all": "prettier --write src/**/*.ts && prettier --write src/**/*.js",
+    "clean": "npm cache clean -f && rm -rf -- node_modules doc coverage dist compiled dll",
+    "clean:dist": "npm run rimraf -- dist",
+    "clean:compiled": "npm run rimraf -- compiled"
   },
   "private": true,
   "dependencies": {
@@ -23,9 +35,13 @@
     "@angular/router": "^7.2.15",
     "core-js": "^2.6.10",
     "hammerjs": "^2.0.8",
+    "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
+    "shx": "^0.3.2",
     "tslib": "^1.10.0",
+    "tslint-lines-between-class-members": "^1.3.6",
+    "tslint-lines-between-decorator-and-class": "^1.0.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -36,6 +52,7 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
+    "angular-tslint-rules": "^1.20.1",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -46,8 +63,11 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "prettier": "1.18.2",
     "protractor": "~5.4.0",
+    "rxjs-tslint-rules": "^4.25.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "tslint-consistent-codestyle": "^1.16.0",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "~3.2.2"
   }
 }
