--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,5 +4,6 @@
         "outDir": "../out-tsc/app",
         "types": []
     },
-    "exclude": ["test.ts", "**/*.spec.ts"]
+    "exclude": ["src/test.ts", "**/*.spec.ts"],
+    "include": ["src", "custom-typings.d.ts"]
 }
