--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,35 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
-    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "importHelpers": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
     ],
+    "types": [
+      "node",
+      "jquery",
+      "jest",
+      "mocha",
+      "jasmine"
+    ],
     "lib": [
-      "es2018",
+      "es2017",
       "dom"
-    ]
-  }
+    ],
+    "baseUrl": ".",
+    "paths": {
+      
+    }
+  },
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
