--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "tslint": "~5.11.0",
     "tslint-consistent-codestyle": "^1.16.0",
     "tslint-eslint-rules": "^5.4.0",
+    "tslint-plugin-prettier": "^2.0.1",
     "typescript": "~3.2.2"
   }
 }
