[fixinglint] fixed style errors

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/router": "^7.2.15",
     "core-js": "^2.6.10",
     "hammerjs": "^2.0.8",
+    "jshint": "^2.10.2",
     "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
