--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,6 +4,5 @@
         "outDir": "../out-tsc/app",
         "types": []
     },
-    "exclude": ["src/test.ts", "**/*.spec.ts"],
-    "include": ["src", "custom-typings.d.ts"]
+    "exclude": ["test.ts", "**/*.spec.ts"]
 }
