--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
+    "start-dev": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "npm run init-hooks",
+    "postinstall": "ng build --output-path angularapp --aot --prod",
     "execute:hooks-folder": "git config core.hooksPath .githooks",
     "execute:prepare-commit-msg": "shx chmod +x .githooks/prepare-commit-msg",
     "execute:pre-commit": "shx chmod +x .githooks/pre-commit",
@@ -23,10 +24,13 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "~7.3.7",
     "@angular/common": "^7.2.15",
+    "@angular/cli": "^7.3.9",
     "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/core": "^7.2.15",
     "@angular/forms": "^7.2.15",
     "@angular/material": "^7.3.7",
@@ -34,6 +38,7 @@
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
     "core-js": "^2.6.10",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "jshint": "^2.10.2",
     "lint-staged": "^9.4.2",
@@ -43,6 +48,7 @@
     "tslib": "^1.10.0",
     "tslint-lines-between-class-members": "^1.3.6",
     "tslint-lines-between-decorator-and-class": "^1.0.1",
+    "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -71,5 +77,9 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-plugin-prettier": "^2.0.1",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "12.3.1",
+    "npm": "6.9.0"
   }
 }
