--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@angular/cdk": "~7.3.7",
     "@angular/common": "^7.2.15",
     "@angular/compiler": "^7.2.15",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/core": "^7.2.15",
     "@angular/forms": "^7.2.15",
     "@angular/material": "^7.3.7",
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
+    "@angular-devkit/build-angular": "^0.13.9",
     "@angular/router": "^7.2.15",
     "core-js": "^2.6.10",
     "express": "^4.17.1",
@@ -44,6 +47,7 @@
     "tslib": "^1.10.0",
     "tslint-lines-between-class-members": "^1.3.6",
     "tslint-lines-between-decorator-and-class": "^1.0.1",
+    "typescript": "~3.2.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
