--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@angular-devkit/build-angular": "^0.13.9",
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "~7.3.7",
-    "@angular/common": "^7.2.15",
     "@angular/cli": "^7.3.9",
+    "@angular/common": "^7.2.15",
     "@angular/compiler": "^7.2.15",
     "@angular/compiler-cli": "^7.2.15",
     "@angular/core": "^7.2.15",
@@ -37,6 +37,11 @@
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^8.5.1",
+    "@ngrx/router-store": "^8.5.1",
+    "@ngrx/store": "^8.5.1",
+    "@ngrx/store-devtools": "^8.5.1",
     "core-js": "^2.6.10",
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
@@ -44,6 +49,7 @@
     "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
+    "save": "^2.4.0",
     "shx": "^0.3.2",
     "tslib": "^1.10.0",
     "tslint-lines-between-class-members": "^1.3.6",
