--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/router": "^7.2.15",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^8.5.1",
+    "@ngrx/entity": "^8.5.2",
     "@ngrx/router-store": "^8.5.1",
     "@ngrx/store": "^8.5.1",
     "@ngrx/store-devtools": "^8.5.1",
@@ -47,6 +48,7 @@
     "hammerjs": "^2.0.8",
     "jshint": "^2.10.2",
     "lint-staged": "^9.4.2",
+    "ngrx-store-freeze": "^0.2.4",
     "node-sass": "^4.12.0",
     "rxjs": "~6.3.3",
     "save": "^2.4.0",
